<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="@dimen/activity_standard_margin"
    tools:context="com.appcelerator.weatherapp.activity.HomeActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:foregroundGravity="right" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/head_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/iv_weather_icon"
                    android:layout_width="100dip"
                    android:layout_height="100dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/activity_standard_margin"
                    android:layout_marginRight="@dimen/activity_standard_margin" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="100dip"
                    android:layout_toLeftOf="@+id/iv_weather_icon"
                    android:gravity="center_vertical"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/iv_weather_icon"
                    android:layout_marginRight="@dimen/activity_standard_margin"
                    android:layout_marginTop="@dimen/activity_standard_margin"
                    android:text="@string/last_updated"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_last_updated_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_last_updated"
                    android:layout_marginRight="@dimen/activity_standard_margin"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_small_margin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_real_feel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sunrise_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_margin"
                android:text="@string/sunrise_sunset"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:background="@color/brown" />

            <RelativeLayout
                android:id="@+id/sunrise_sunset_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_small_margin" >

                <TextView
                    android:id="@+id/tv_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sunrise_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_sunrise"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_sunrise"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sunset_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_sunrise_value"
                    android:layout_toRightOf="@+id/tv_sunset"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_weather_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_margin"
                android:text="@string/weather"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:background="@color/brown" />

            <RelativeLayout
                android:id="@+id/weather_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_small_margin" >

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_pressure"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sea_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_pressure"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/sea_level"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_sea_level_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_pressure_value"
                    android:layout_toRightOf="@+id/tv_sea_level"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_sea_level"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_sea_level_value"
                    android:layout_toRightOf="@+id/tv_humidity"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_clouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_humidity"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/clouds"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_clouds_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_humidity_value"
                    android:layout_toRightOf="@+id/tv_clouds"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_wind_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_margin"
                android:text="@string/wind"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:background="@color/brown" />

            <RelativeLayout
                android:id="@+id/wind_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_standard_margin"
                android:layout_marginRight="@dimen/activity_standard_margin"
                android:layout_marginTop="@dimen/activity_standard_small_margin" >

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/speed"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_wind_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/tv_wind_speed"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tv_wind_speed"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/direction"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_wind_direction_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tv_wind_speed_value"
                    android:layout_toRightOf="@+id/tv_wind_direction"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>